--- a/core/themes/bartik/css/components/header.css
+++ b/core/themes/bartik/css/components/header.css
@@ -87,7 +87,7 @@ h1.site-name {
   background: rgba(255, 255, 255, 0.8);
 }
 .region-header .form-required:after {
-  background-image: url(../images/required.svg);
+  background-image: url(../../images/required.svg);
 }
 /* Region header block menus. */
 .region-header .block-menu {
